fix about link index issue on mobile

--- a/client/index.scss
+++ b/client/index.scss
@@ -452,6 +452,7 @@ p.work-title {
     grid-column: 1;
     grid-row: 7;
     margin: auto;
+    z-index: 2;
   }
 
   #fourth-dot {
